# 5g-ntn-cochannel-interference

./: README.md  pyproject.toml  requirements.txt
configs/: baseline.yaml  mitigation.yaml  sensitivity.yaml
dashboard/: streamlit_app.py
results/data/: baseline_results.csv  mitigation_results.csv  power_breakdown.csv  scenario_validation.csv  sensitivity_results.csv
scripts/: generate_report_figures.py  validate_scenarios.py
src/ntn_interference/: __init__.py  config.py  geometry.py  link_budget.py  plots.py  sensitivity.py  simulation.py
tests/: test_geometry.py  test_link_budget.py  test_simulation.py
