[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntn-interference"
version = "0.1.0"
description = "5G-NTN co-channel interference simulator for LEO satellite links"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "streamlit>=1.40",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
